--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,15 @@
 samples: samples.tsv
 units: units.tsv
 
+outdir: "out"
+logdir: "log"
+
 ref:
-  name: GRCh38.86
+  name: GRCh37.75
   # Path to the reference genome, ideally as it is provided by the GATK bundle.
-  genome: data/ref/genome.chr21.fa
+  genome: /home/tdidomenico/tmp/varca_res/hg19.fa
   # Path to any database of known variants, ideally as it is provided by the GATK bundle.
-  known-variants: data/ref/dbsnp.vcf.gz
+  known-variants: /home/tdidomenico/tmp/varca_res/dbsnp_150.hg19.vcf
 
 filtering:
   # Set to true in order to apply machine learning based recalibration of
@@ -24,7 +27,7 @@ processing:
   remove-duplicates: true
   # Uncomment and point to a bed file with, e.g., captured regions if necessary,
   # see https://gatkforums.broadinstitute.org/gatk/discussion/4133/when-should-i-use-l-to-pass-in-a-list-of-intervals.
-  # restrict-regions: captured_regions.bed
+  restrict-regions: /home/tdidomenico/tmp/varca_res/CCP.20131001.designed.bed
   # If regions are restricted, uncomment this to enlarge them by the given value in order to include
   # flanking areas.
   # region-padding: 100
@@ -52,3 +55,28 @@ params:
         - "TRAILING:3"
         - "SLIDINGWINDOW:4:15"
         - "MINLEN:36"
+
+resources:
+    default:
+        threads: 1
+        mem: 2000
+    snpeff:
+        mem: 8000
+    call_variants:
+        mem: 10000
+        threads: 4
+    combine_calls:
+        mem: 8000
+        threads: 1
+    hard_filter_calls:
+        mem: 8000
+    trim_reads:
+        mem: 4000
+        threads: 16
+    map_reads:
+        mem: 8000
+        threads: 8
+    recalibrate_base_qualities:
+        mem: 4000
+    mark_duplicates:
+        mem: 32000
