Added out and log dir to example and test config files.

--- a/.test/config.yaml
+++ b/.test/config.yaml
@@ -1,6 +1,9 @@
 samples: samples.tsv
 units: units.tsv
 
+outdir: "out"
+logdir: "log"
+
 ref:
   name: GRCh38.86
   genome: data/ref/genome.chr21.fa
