--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,6 +1,9 @@
 samples: samples.tsv
 units: units.tsv
 
+outdir: "out"
+logdir: "log"
+
 ref:
   name: GRCh38.86
   # Path to the reference genome, ideally as it is provided by the GATK bundle.
