Added params section to example and test config files.

--- a/.test/config.yaml
+++ b/.test/config.yaml
@@ -47,3 +47,8 @@ params:
         - "TRAILING:3"
         - "SLIDINGWINDOW:4:15"
         - "MINLEN:36"
+
+resources:
+    default:
+        threads: 1
+        mem: 2000
