--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
   - conda create -q -n snakemake snakemake python=${PYTHON_VERSION}
-  - conda create -q -n prep bwa gatk4 samtools
+  - conda create -q -n prep bwa=0.7.17 gatk4=4.0.5.1 samtools=1.9
   - source activate prep
   - bwa index .test/data/ref/genome.chr21.fa
   - samtools faidx .test/data/ref/genome.chr21.fa
