--- a/.test/config.yaml
+++ b/.test/config.yaml
@@ -20,7 +20,8 @@ filtering:
       "QD < 2.0 || FS > 60.0 || MQ < 40.0 || MQRankSum < -12.5 || ReadPosRankSum < -8.0"
     indels:
       "QD < 2.0 || FS > 200.0 || ReadPosRankSum < -20.0"
-
+  depth: "DP < 10"
+  
 processing:
   remove-duplicates: true
   restrict-regions: data/ref/captured_regions.bed
