--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
   - conda config --add channels defaults
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
-  - conda create -q -n snakemake snakemake python=${PYTHON_VERSION}
+  - conda create -q -n snakemake snakemake pygments python=${PYTHON_VERSION}
   - conda create -q -n prep bwa=0.7.17 gatk4=4.0.5.1 samtools=1.9
   - source activate prep
   - bwa index .test/data/ref/genome.chr21.fa
