--- a/config-example.yaml
+++ b/config-example.yaml
@@ -23,7 +23,7 @@ filtering:
     snvs:
       "QD < 2.0 || QUAL < 100.0 || DP < 50.0 || SOR > 3.0 || FS > 60.0 || MQ < 40.0 || MQRankSum < -12.5 || ReadPosRankSum < -8.0"
     indels:
-      "QD < 2.0 || QUAL < 100 || DP < 10.0 || FS > 200.0 || ReadPosRankSum < -20.0"
+      "QD < 2.0 || QUAL < 100 || DP < 50.0 || FS > 200.0 || ReadPosRankSum < -20.0"
   #depth of coverage threshold to apply to variants identified with MuTect2
   depth: "DP < 30"
 
@@ -41,7 +41,26 @@ params:
     HaplotypeCaller: ""
     BaseRecalibrator: ""
     GenotypeGVCFs: ""
-    VariantRecalibrator: ""
+    #If vqsr set to true, fill the following section with the required information (see VariantRecalibrator documentation in GATK)
+    VariantRecalibrator:
+      #paths to the necessary resources
+      hapmap: "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_hapmap_3.3.hg38.vcf.gz"
+      omni: "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_1000G_omni2.5.hg38.vcf.gz"
+      g1k: "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_1000G_phase1.snps.high_confidence.hg38.vcf.gz"
+      dbsnp: "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_Homo_sapiens_assembly38.dbsnp138.vcf"
+      #paths to the resource indexes
+      aux: ["/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_hapmap_3.3.hg38.vcf.gz.tbi",
+            "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_1000G_omni2.5.hg38.vcf.gz.tbi",
+            "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_1000G_phase1.snps.high_confidence.hg38.vcf.gz.tbi",
+            "/home/epineiro/REFERENCES/Homo_sapiens/HG38/resources_broad_hg38_v0_Homo_sapiens_assembly38.dbsnp138.vcf.idx"]
+      #set definition for each resource
+      parameters: {"hapmap": {"known": False, "training": True, "truth": True, "prior": 15.0},
+                   "omni":   {"known": False, "training": True, "truth": False, "prior": 12.0},
+                   "g1k":   {"known": False, "training": True, "truth": False, "prior": 10.0},
+                   "dbsnp":  {"known": True, "training": False, "truth": False, "prior": 2.0}}
+      #Names of the annotations used for calculations
+      annotation: ["QD", "MQ", "MQRankSum", "ReadPosRankSum", "FS", "SOR"]
+      extra: ""
   picard:
     MarkDuplicates: "REMOVE_DUPLICATES=true"
   trimmomatic:
@@ -88,6 +107,9 @@ resources:
     combine_calls:
         mem: 8000
         threads: 1
+        walltime: 480
+    recalibrate_calls:
+        mem: 8000
         walltime: 480
     hard_filter_calls:
         mem: 8000
