--- a/config-example.yaml
+++ b/config-example.yaml
@@ -26,8 +26,11 @@ filtering:
       "QD < 2.0 || QUAL < 100.0 || DP < 50.0 || SOR > 3.0 || FS > 60.0 || MQ < 40.0 || MQRankSum < -12.5 || ReadPosRankSum < -8.0"
     indels:
       "QD < 2.0 || QUAL < 100 || DP < 50.0 || FS > 200.0 || ReadPosRankSum < -20.0"
-  #depth of coverage threshold to apply to variants identified with MuTect2
-  depth: "DP < 30"
+  mutect:
+    #depth of coverage threshold to apply to variants identified with MuTect2
+    depth: "DP < 30"
+    #apply LearnReadOrientationModel to filter out read orientation artifacts
+    lrom: false
 
 processing:
   remove-duplicates: true
