--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,18 @@
-image: continuumio/miniconda3:latest
+---
+
+image: condaforge/mambaforge:latest
 
 variables:
     GIT_SUBMODULE_STRATEGY: normal
 
 before_script:
   - conda config --set always_yes yes --set changeps1 no
-  - conda info -a
   - conda config --add channels defaults
   - conda config --add channels bioconda
   - conda config --add channels conda-forge
-  - conda create -q -n snakemake snakemake pygments mamba python=${PYTHON_VERSION}
-  - conda create -q -n prep bwa=0.7.17 gatk4=4.0.5.1 samtools=1.9
+  - mamba info -a
+  - mamba create -q -n snakemake snakemake pygments python=${PYTHON_VERSION}
+  - mamba create -q -n prep bwa=0.7.17 gatk4=4.0.5.1 samtools=1.9
   - source activate prep
   - bwa index .test/data/ref/genome.chr21.fa
   - samtools faidx .test/data/ref/genome.chr21.fa
@@ -20,7 +22,5 @@ tests:
   stage: test
   script:
     - source activate snakemake
-    # run the workflow
-    # put a test case into the subfolder .test (e.g., use https://gitlab.com/bu_cnio/ngs-test-data as a submodule)
     - snakemake --cores 4 --use-conda --directory .test
     - snakemake --cores 1 --directory .test --report report.html
