--- a/.test/config.yaml
+++ b/.test/config.yaml
@@ -22,7 +22,9 @@ filtering:
       "QD < 2.0 || FS > 60.0 || MQ < 40.0 || MQRankSum < -12.5 || ReadPosRankSum < -8.0"
     indels:
       "QD < 2.0 || FS > 200.0 || ReadPosRankSum < -20.0"
-  depth: "DP < 10"
+  mutect:
+    depth: "DP < 10"
+    lrom: false
   
 processing:
   remove-duplicates: true
@@ -35,6 +37,14 @@ params:
     BaseRecalibrator: ""
     GenotypeGVCFs: ""
     VariantRecalibrator: ""
+      hapmap: ""
+      omni: ""
+      g1k: ""
+      dbsnp: ""
+      aux: []
+      parameters: {}
+      annotation: []
+      extra: ""
   picard:
     MarkDuplicates: "REMOVE_DUPLICATES=true"
   trimmomatic:
