--- a/.test/config.yaml
+++ b/.test/config.yaml
@@ -36,7 +36,7 @@ params:
     HaplotypeCaller: ""
     BaseRecalibrator: ""
     GenotypeGVCFs: ""
-    VariantRecalibrator: ""
+    VariantRecalibrator:
       hapmap: ""
       omni: ""
       g1k: ""
