Mark all files as temp for CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,5 @@ tests:
   stage: test
   script:
     - source activate snakemake
-    - snakemake --cores 4 --use-conda --directory .test
-    - snakemake --cores 1 --directory .test --report report.html
+    - snakemake --all-temp --cores 4 --use-conda --directory .test
+    - snakemake --all-temp --cores 1 --directory .test --report report.html
