Add argument to cleanup conda

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,5 @@ tests:
   script:
     - source activate snakemake
     - df -h
-    - snakemake --all-temp --cores 4 --use-conda --directory .test
+    - snakemake --conda-cleanup-pkgs cache --all-temp --cores 4 --use-conda --directory .test
     - snakemake --all-temp --cores 1 --directory .test --report report.html
