Add more cleanup code

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ before_script:
   - bwa index .test/data/ref/genome.chr21.fa
   - samtools faidx .test/data/ref/genome.chr21.fa
   - gatk CreateSequenceDictionary -R .test/data/ref/genome.chr21.fa
+  - conda deactivate
   - mamba remove -y --all prep
   - mamba clean -y --all
 
