Add all index files as mapping input

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ tests:
   script:
     - source activate snakemake
     - df -h
-    - snakemake --conda-cleanup-pkgs cache --all-temp --cores 1 --use-conda --directory .test
-    - snakemake --all-temp --cores 1 --directory .test --report report.html
+    - snakemake --conda-cleanup-pkgs cache --cores 1 --use-conda --directory .test
+    - snakemake --cores 1 --directory .test --report report.html
   artifacts:
     when: on_failure
     paths:
