--- a/config-example.yaml
+++ b/config-example.yaml
@@ -12,6 +12,8 @@ ref:
   genome: /home/epineiro/REFERENCES/Homo_sapiens/HG38/hg38.fa
   # Path to the directory with the reference indexes for the aligment. Indexes will be retrieve from this directory or created in it if they do not exist
   genome_idx: /home/epineiro/REFERENCES/Homo_sapiens/HG38/indexes/bwa_mem2/
+  # If the reference genome contains alternative contigs, indicate the path to the .alt index file to account for their presence in the alignment. Otherwise, leave the field empty. The specified file will be renamed to the indicated reference genome and included in the index directory. Please, visit https://github.com/lh3/bwa/blob/master/README-alt.md and https://gatk.broadinstitute.org/hc/en-us/articles/360037498992--How-to-Map-reads-to-a-reference-with-alternate-contigs-like-GRCH38.
+  genome_alt: /home/epineiro/REFERENCES/Homo_sapiens/HG38/indexes/hs38DH.fa.alt
   # Path to any database of known variants, ideally as it is provided by the GATK bundle.
   known-variants: /home/epineiro/REFERENCES/Homo_sapiens/HG38/dbsnp_151.hg38.vcf
 
