--- a/config-example.yaml
+++ b/config-example.yaml
@@ -15,7 +15,7 @@ ref:
   # If the reference genome contains alternative contigs, indicate the path to the .alt index file to account for their presence in the alignment. Otherwise, leave the field empty. The specified file will be renamed to the indicated reference genome and included in the index directory. Please, visit https://github.com/lh3/bwa/blob/master/README-alt.md and https://gatk.broadinstitute.org/hc/en-us/articles/360037498992--How-to-Map-reads-to-a-reference-with-alternate-contigs-like-GRCH38.
   genome_alt: /home/epineiro/REFERENCES/Homo_sapiens/HG38/indexes/hs38DH.fa.alt
   # Path to any database of known variants, ideally as it is provided by the GATK bundle.
-  known-variants: /home/epineiro/REFERENCES/Homo_sapiens/HG38/dbsnp_151.hg38.vcf
+  known_variants: /home/epineiro/REFERENCES/Homo_sapiens/HG38/dbsnp_151.hg38.vcf
 
 filtering:
   # Set to true in order to apply machine learning based recalibration of
@@ -35,13 +35,13 @@ filtering:
     lrom: false
 
 processing:
-  remove-duplicates: true
+  remove_duplicates: true
   # Uncomment and point to a bed file with, e.g., captured regions if necessary,
   # see https://gatkforums.broadinstitute.org/gatk/discussion/4133/when-should-i-use-l-to-pass-in-a-list-of-intervals.
-  restrict-regions: /home/epineiro/REFERENCES/Homo_sapiens/HG38/S04380219_Padded_v5_hg38_varca.bed
+  restrict_regions: /home/epineiro/REFERENCES/Homo_sapiens/HG38/S04380219_Padded_v5_hg38_varca.bed
   # If regions are restricted, uncomment this to enlarge them by the given value in order to include
   # flanking areas.
-  # region-padding: 100
+  # region_padding: 100
 
 params:
   gatk:
