--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
         activate-environment: test
     - name: Generate test data
       run: |
+        conda activate test
         bwa index .test/data/ref/genome.chr21.fa
         samtools faidx .test/data/ref/genome.chr21.fa
         gatk CreateSequenceDictionary -R .test/data/ref/genome.chr21.fa
