Edit MarkDuplicates example parameter

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -68,7 +68,7 @@ params:
       extra: ""
     mutect: ""
   picard:
-    MarkDuplicates: "REMOVE_DUPLICATES=true"
+    MarkDuplicates: "--REMOVE_DUPLICATES true"
   trimmomatic:
     pe:
       trimmer:
