--- a/config-example.yaml
+++ b/config-example.yaml
@@ -102,7 +102,7 @@ annotation:
     species: homo_sapiens
     #Indicate the annotations to include and plugins to use with the VEP execution, along with additional parameters according to your preferences. See the documentation (https://www.ensembl.org/info/docs/tools/vep/script/vep_options.html) for the details.
     plugins: []
-    extra: "--sift b --polyphen b --ccds --uniprot --hgvs --symbol --numbers --domains --regulatory --canonical --protein --biotype --uniprot --tsl --af --variant_class --xref_refseq --af_1kg --af_esp --af_gnomad --appris --fasta GRCh38.primary_assembly.genome.fa"
+    extra: "--sift b --polyphen b --ccds --uniprot --hgvs --symbol --numbers --domains --regulatory --canonical --protein --biotype --uniprot --tsl --af --variant_class --xref_refseq --af_1kg --af_gnomad --appris --fasta GRCh38.primary_assembly.genome.fa"
 
 resources:
     default:
